service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wog-scores
spec:
  selector:
    app: wog-scores
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
